add permission model and auth, autlist view

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "backbone": "~1.1.2",
-    "backbone-forms": "~0.14.0",
-    "backbone-pageable": "~1.4.5",
-    "backbone.marionette": "~1.8.1",
+    "backbone-forms": "https://github.com/powmedia/backbone-forms/archive/master.tar.gz",
+    "backbone.marionette": "^1.8.8",
+    "backbone.paginator": "^2.0.2",
+    "body-parser": "^1.9.2",
     "coffee-script": "1.6.3",
     "connect-busboy": "0.0.1",
     "connect-ensure-login": "~0.1.1",
@@ -29,6 +30,7 @@
     "passport-http-bearer": "1.0.1",
     "passport-ttsoon": "https://github.com/twhtanghk/passport-ttsoon/archive/master.tar.gz",
     "promise": "~4.0.0",
+    "restim": "https://github.com/twhtanghk/restim/archive/master.tar.gz",
     "underscore": "~1.6.0",
     "zappajs": "~0.4.22"
   },
