--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
   ],
   "dependencies": {
     "jquery": "~2.0.3",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "bootstrap.growl": "~2.0.1",
+    "select2": "~3.5.2"
   }
 }
