--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "angular-material": "~0.7.1",
-    "angular-activerecord": "~0.3.0",
     "underscore": "~1.8.2",
     "jquery": "~2.1.3",
     "jquery-deparam": "~0.2.0",
-    "angular-http-auth": "~1.2.2"
+    "angular-http-auth": "~1.2.2",
+    "tagDirective": "https://github.com/twhtanghk/tagDirective/archive/master.tar.gz",
+    "angular-activerecord": "~0.3.0"
   }
 }
