--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "backbone-forms": "https://github.com/powmedia/backbone-forms/archive/master.tar.gz",
     "backbone.marionette": "^2.3.0",
     "backbone.paginator": "^2.0.2",
-    "body-parser": "^1.9.2",
+    "body-parser": "^1.12.2",
     "coffee-script": "^1.9.1",
     "connect-busboy": "0.0.1",
     "connect-ensure-login": "~0.1.1",
-    "express": "3.2.6",
+    "errorhandler": "^1.3.5",
+    "express": "^4.12.3",
+    "express-session": "^1.10.4",
     "i18n": "~0.4.1",
-    "jade": "0.35.0",
+    "jade": "^1.9.2",
     "log4js": "~0.6.14",
     "mime": "~1.2.11",
     "mongoose": "3.8.4",
     "mongoose-findorcreate": "0.1.2",
     "mongoose-taggable": "~0.5.0",
+    "morgan": "^1.5.2",
+    "multer": "^0.1.8",
     "needle": "~0.7.1",
     "parsed-url": "0.0.0",
     "passport": "0.1.17",
@@ -29,6 +33,7 @@
     "passport-ttsoon": "https://github.com/twhtanghk/passport-ttsoon/archive/master.tar.gz",
     "promise": "^4.0.0",
     "restim": "https://github.com/twhtanghk/restim/archive/master.tar.gz",
+    "serve-favicon": "^2.2.0",
     "underscore": "~1.6.0",
     "zappajs": "~0.4.22"
   },
