--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "coffee-script": "^1.9.1",
     "connect-busboy": "0.0.1",
     "connect-ensure-login": "~0.1.1",
+    "cookie-parser": "^1.3.4",
     "errorhandler": "^1.3.5",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
