update readme to generate image resources

--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "org.apache.cordova.inappbrowser",
     "com.bridge.open",
     "org.apache.cordova.file-transfer"
+  ],
+  "cordovaPlatforms": [
+    "android"
   ]
 }
