--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-http-auth": "~1.2.2",
     "tagDirective": "https://github.com/twhtanghk/tagDirective/archive/master.tar.gz",
     "angular-activerecord": "~0.3.0",
-    "ng-file-upload": "~3.2.4"
+    "ng-file-upload": "~3.2.4",
+    "angular-touch": "~1.3.15"
   }
 }
