--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "keywords": [],
   "dependencies": {
     "coffee-script": "^1.10.0",
+    "file-saver": "^1.3.2",
     "include-all": "~0.1.6",
     "mime-types": "^2.1.11",
     "nan": "^2.3.5",
+    "ng-file-upload": "^12.0.4",
     "rc": "^1.1.6",
     "sails": "~0.12.3",
     "sails-hook-requestlogger-file": "^2.0.5",
     "sails-mongo": "^0.12.0",
-    "skipper-gridfs": "git+https://github.com/twhtanghk/skipper-gridfs.git"
+    "skipper-gridfs": "git+https://github.com/twhtanghk/skipper-gridfs.git",
+    "streamifier": "^0.1.1",
+    "streamqueue": "^1.1.1"
   },
   "scripts": {
-    "debug": "node debug app.js",
+    "debug": "node-debug --web-host 0.0.0.0 app.js",
     "start": "node app.js",
     "test": "node_modules/.bin/mocha test/bootstrap.test.coffee test/unit/**/*.coffee"
   },
@@ -28,10 +32,23 @@
   "author": "anonymous node/sails user",
   "license": "",
   "devDependencies": {
+    "bower": "^1.7.9",
+    "browserify": "^13.0.1",
+    "coffeeify": "^2.0.1",
+    "debowerify": "^1.5.0",
+    "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^1.8.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-less": "^3.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "ionic": "^1.7.15",
     "mocha": "^2.5.3",
     "sails-generate-controller-coffee": "0.0.0",
     "sails-generate-model-coffee": "^0.10.9",
     "supertest": "^1.2.0",
-    "supertest-as-promised": "^3.1.0"
+    "supertest-as-promised": "^3.1.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
